--- a/style.css
+++ b/style.css
@@ -354,5 +354,28 @@ footer {
     grid-template-columns: 1fr;
   }
 }
+  .contact-hero {
+  background: linear-gradient(to right, #09356B, #ffc72c);
+  padding: 6rem 2rem;
+  text-align: center;
+  color: white;
+}
+
+.contact-hero .hero-text {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.contact-hero h1 {
+  font-size: 2.8rem;
+  margin-bottom: 1rem;
+}
+
+.contact-hero p {
+  font-size: 1.2rem;
+  margin: 0 auto;
+  line-height: 1.6;
+}
+
 
 }
